# FinMath-FixedIncome

./: README.md  formula_reference_sheet.ipynb  forward_rates.ipynb  pyproject.toml
Treasury Futures/: forward_pricing_and_carry.ipynb
interest_rate_risk/: duration.ipynb  steepener_trade.ipynb  treasury_arbitrage.ipynb  treasury_arbitrage_pandas.ipynb
project/: fitting_yield_curves.ipynb
rate_curves/: estimating_the_spot_curve.ipynb  forward_rates_polars.ipynb  the_carry_trade_pandas.ipynb  the_carry_trade_polars.ipynb
swaps/: swap_discount_curve.ipynb
treasury_futures/: ctd_and_implied_repo.ipynb  forward_pricing_and_carry.ipynb  treasuryrepo.ipynb
