[project]
name = "finmath-fixedincome"
version = "0.1.0"
description = "Uchicago's MSFM Fixed income Assignments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.18.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "polars[rt64]>=1.37.0",
    "ruff>=0.14.11",
    "scipy>=1.16.3",
    "ty>=0.0.11",
]
